@startuml concept

entity user as "Пользователь" {
  +id(pk)
  +login
  +password
  +registration_date
} 
entity personal_data as "Персональные данные" {
  +first_name
  +last_name
  +middle_name
  +phone_number
  ~date_of_birth
  ~address
  +user_id(fk)
}
entity role as "Роли" {
  +id(pk)
  +name
  ~description
}
entity privilege as "Привелегии" {
  +id(pk)
  +name
  ~description
}
entity movie as "Фильмы" {
  +id(pk)
  +name
  +price
  ~description
}
entity tape as "Носитель" {
  +id(pk)
  +movie_id(fk)
  +tape_type
}
entity tape_condition as "Состояние носителя" {
  +id(pk);
  +tape_id(fk);
  +cond_begin;
  ~cond_end;
  ~store_id(fk);
  ~rent_id(fk);
}
entity client as "Клиент" {
  +id
  +user_id(fk)
}
entity rent as "Аренда" {
  +id(pk)
  +client_id(fk)
}
entity rental_store as "Точка проката" {
  +id(pk)
  +address
  ~description
}
entity employee as "Сотрудник" {
  +id
  +user_id(fk)
}

user -- personal_data
user -- client
user -- employee
client --{ rent
role }--{ privilege
role }--{ employee
tape }-u- movie
rent -l-{ tape_condition
rental_store --{ tape_condition
tape_condition -l- tape

@enduml